--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -8,13 +8,19 @@
   },
   "dependencies": {
     "@googleapis/gmail": "^16.1.1",
+    "@hono/zod-validator": "^0.7.5",
+    "@openrouter/ai-sdk-provider": "^1.5.3",
     "agents": "^0.2.32",
+    "ai": "^5.0.113",
+    "ai-gateway-provider": "^2.1.0",
     "better-auth": "1.4.7-beta.4",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
     "google-auth-library": "^10.5.0",
     "hono": "^4.11.0",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "postal-mime": "^2.6.1",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/node": "^20",
