--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,7 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "better-auth": "^1.4.6",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-slot": "^1.2.4",
+    "better-auth": "1.4.7-beta.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.561.0",
@@ -18,6 +22,7 @@
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "shadcn": "^3.6.0",
+    "swr": "^2.3.8",
     "tailwind-merge": "^3.4.0",
     "tw-animate-css": "^1.4.0"
   },
